# calendar-cleanup

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml
calendar_cleanup/: cli.py  filter.py  schema.py
calendar_cleanup/io/: auth.py  delete.py  load.py
scripts/: cli.py  inspect_ics_file.py  purge_old.py
tests/calendar_cleanup/: test_filter.py
