[tool.poetry]
name = "calendar-cleanup"
version = "0.1.0"
description = "CLI utility to unclutter old calendar entries from WebDAV calendars."
authors = ["top-on <top-on@posteo.de>"]
readme = "README.md"
packages = [{include = "calendar_cleanup"}]

[tool.poetry.dependencies]
python = "~3.11"
webdav4 = "^0.9.8"
ical = "^6.1.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
notebook = "^7.0.6"
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.poetry.scripts]
calendar-cleanup = "scripts.cli:app"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
