[tool.poetry]
name = "calendar-cleanup"
version = "0.2.0"
description = "CLI utility to unclutter old calendar entries from WebDAV calendars."
homepage = "https://github.com/top-on/calendar-cleanup"
authors = ["top-on <top-on@posteo.de>"]
readme = "README.md"
packages = [{ include = "calendar_cleanup" }]

[tool.poetry.dependencies]
python = "^3.11"
webdav4 = "^0.9.8"
ical = "^6.1.0"
typer = "^0.9.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
notebook = "^7.0.6"
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest = "^7.4.3"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
calendar-cleanup = "scripts.cli:app"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
